--- a/index_git.html
+++ b/index_git.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <h1>Git Testing Page</h1>
+    <ul>
+      <li>change to html 1</li>
+    </ul>
 
     <script src="app_git.js"></script>
   </body>
