master check of elajs

--- a/index_git.html
+++ b/index_git.html
@@ -8,8 +8,12 @@
   </head>
   <body>
     <h1>Git Testing Page</h1>
+    <h2>change to html 1</h2>
     <ul>
-      <li>change to html 1</li>
+      <li>one li</li>
+      <li>two li</li>
+      <li>three li</li>
+      <li>four</li>
     </ul>
 
     <script src="app_git.js"></script>
